--- a/song.html
+++ b/song.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>她说</title>
+  <title>一次就好</title>
   <style>
     :root {
       --glass: rgba(255,255,255,0.12);
